team cards were slightly not aligned. Fixed the css

--- a/imports/ui/components/about/about.scss
+++ b/imports/ui/components/about/about.scss
@@ -59,9 +59,15 @@
 		width: 100%;
 	}
 
-	@media(max-width: 1279px){
+	@media (max-width: 1279px){
 		.teamMembers:nth-child(2){
 			margin: 0 0 0 20px;
+		}
+	}
+
+	@media (max-width: 599px){
+		.teamMembers:nth-child(2){
+			margin: 0;
 		}
 	}
 
